intro of 2d arrays

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
         "Patterns",
-        "Function&Array"
+        "Function&Array",
+        "2dArrays"
     ]
 }
